--- a/src/main/resources/templates/admin/announcements/list.html
+++ b/src/main/resources/templates/admin/announcements/list.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
+
+
 <body>
-<h1>admin/list.html<h1>
+	<th:block th:replace="layout/base :: base(
+		'ログイン選択',
+		~{::head},
+		~{::#page},
+		~{::script}
+		)">
+	<!--headに追加したいものがあればここに書く(無ければ空でOK-->
+	<head>	<meta charset="UTF-8">
+	<title>お知らせ一覧</title></head>
+		
+		<div id="page">
+	<h1 class="mb-20">ホーム</h1>
+	<!--th:hrefにより/member/loginというURLを作れと指示-->
+	<!--class=btnでこの要素はボタンとして扱うと宣言-->
+	<div class="container">
+		<h1 class = "mt-4">お知らせ一覧</h1>
+	<!--操作に応じたメッセージを表示:start-->
+<div th:if="${statusMessage}" class="alert alert-success mt-4">
+	[[${statusMessage}]]
+</div>	
+<!--操作に応じたメッセージを表示:end-->
+<p><a class="mt-4 btn btn-primary" th:href="@{/admin/announcements/add}">お知らせの追加</a>
+<p><a class="mt-4 ml-4 btn btn-secondary" th:href="@{/logout}">ログアウト</a>
+
+</p>
+	
+	</a>
+	</div>
+	</div>
+	<!--scriptを追加したい時だけ書く(無ければ空でOK-->
+	<script></script>
+	</th:block>
+	<footer>
+		<a th:href="@{/admin/logout}" class="btn btn-primary">
+		ログアウト
+	</footer>
+
 </body>
 </html>
