--- a/src/main/resources/templates/admin/announcements/form.html
+++ b/src/main/resources/templates/admin/announcements/form.html
@@ -19,8 +19,8 @@
 		お知らせを追加しました
 	</div>
 	<p>
-		<a class="mt-4 btn btn-primary" th:href="@{/admin/announcements/add}">お知らせの追加</a>
-		<a class="mt-4 ms-4 btn btn-secondary" th:href="@{/admin/logout}">ログアウト
+		<a class="btn btn-primary" th:href="@{/admin/announcements/submit}">お知らせの追加</a>
+		<a class="btn btn-secondary" th:href="@{/admin/logout}">ログアウト
 			
 		</a>
 	</p>
